--- a/app/src/main/res/layout/activity_add_work.xml
+++ b/app/src/main/res/layout/activity_add_work.xml
@@ -24,7 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Button"
+        android:onClick="onClick"
+        android:text="@string/add_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
