--- a/app/src/main/res/layout/add_work_item.xml
+++ b/app/src/main/res/layout/add_work_item.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent">
 
 
+
     <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
@@ -21,7 +22,7 @@
     <TextView
         android:id="@+id/desc"
         android:layout_width="264dp"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -29,7 +30,9 @@
         android:text="тест"
         app:layout_constraintEnd_toStartOf="@+id/time"
         app:layout_constraintStart_toEndOf="@+id/checkBox"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:clickable="true"
+        android:focusable="true"/>
 
     <TextView
         android:id="@+id/time"
