перевод на ExpandableListView

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,10 +8,11 @@
     tools:context="com.example.andrey.timefor.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <ListView
-        android:id="@+id/lv"
-        android:layout_width="367dp"
-        android:layout_height="495dp"
+
+    <ExpandableListView
+        android:id="@+id/expandableListView"
+        android:layout_width="344dp"
+        android:layout_height="543dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
