--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,14 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.andrey.timefor.MainActivity">
     <item
-        android:id ="@+id/count"
+        android:id ="@+id/mean"
         android:title=""
         android:orderInCategory="1"
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:id ="@+id/count"
+        android:title=""
+        android:orderInCategory="2"
         app:showAsAction="ifRoom"/>
     <item
         android:id ="@+id/need"
         android:title="@string/time85"
-        android:orderInCategory="2"
+        android:orderInCategory="3"
         app:showAsAction="ifRoom"/>
 
 </menu>
