--- a/app/src/main/res/menu/menu_host.xml
+++ b/app/src/main/res/menu/menu_host.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.andrey.timefor.HostActivity">
     <item
+        android:id="@+id/item_average"
+        app:showAsAction="always"
+        android:title=""/>
+    <item
         android:id="@+id/item_time"
         app:showAsAction="always"
         android:title=""/>
@@ -12,7 +16,7 @@
         android:title=""/>
     <item
         android:id="@+id/item_menu_settings"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:title="@string/settings"
         android:icon="@drawable/baseline_settings_white_24"/>
 </menu>
