добавлены работы "26-01 ВНУТРЕННИЕ РАБОТЫ"

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<color name="colorPrimary">#009688</color>
-<color name="colorPrimaryDark">#00796B</color>
-<color name="primary_light">#B2DFDB</color>
-<color name="colorAccent">#FF5252</color>
-<color name="primary_text">#212121</color>
-<color name="secondary_text">#757575</color>
-<color name="icons">#FFFFFF</color>
-<color name="divider">#BDBDBD</color>
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryDark">#00796B</color>
+    <color name="primary_light">#B2DFDB</color>
+    <color name="colorAccent">#FF5252</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#757575</color>
+    <color name="icons">#FFFFFF</color>
+    <color name="divider">#BDBDBD</color>
+
+    <!--<color name="primaryColor">#80cbc4</color>
+    <color name="primaryLightColor">#b2fef7</color>
+    <color name="primaryDarkColor">#4f9a94</color>
+    <color name="secondaryColor">#651fff</color>
+    <color name="secondaryLightColor">#a255ff</color>
+    <color name="secondaryDarkColor">#0100ca</color>
+    <color name="primaryTextColor">#000000</color>
+    <color name="secondaryTextColor">#ffffff</color>-->
 </resources>
