--- a/app/src/main/res/layout/main_fragment_listview_child_item.xml
+++ b/app/src/main/res/layout/main_fragment_listview_child_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.andrey.timefor.CheckableLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
@@ -15,4 +15,4 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/item_margin"/>
 
-</LinearLayout>
+</com.example.andrey.timefor.CheckableLinearLayout>
